tests/urmoac/errors/unknown_option/errors.urmoac
Parse Error:Unrecognized option: --foo
